--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,12 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.12.1",
-    "@strapi/plugin-users-permissions": "4.12.1",
     "@strapi/plugin-i18n": "4.12.1",
-    "better-sqlite3": "8.5.0"
+    "@strapi/plugin-users-permissions": "4.12.1",
+    "@strapi/strapi": "4.12.1",
+    "better-sqlite3": "8.5.0",
+    "stripe": "^12.18.0"
   },
   "author": {
     "name": "A Strapi developer"
